# AIE6-DeployPythonicRAG

./: .env.example  .gitignore  CHANGELOG.md  DOCKER_README.md  Dockerfile  HUGGINGFACE.md  LANGSMITH_README.md  README-HF.md  README.md  ROADMAP.md  app.py  docker-compose.yml  pyproject.toml
.cursor/rules/: my.mdc
.huggingface/: DESCRIPTION
aimakerspace/: qdrant_vectordb.py  vectordatabase.py
aimakerspace/openai_utils/: chatmodel.py  embedding.py
api/: config.py  logging_config.py  main.py  requirements.txt
api/models/: pydantic_models.py
api/routers/: base.py  chat.py  document.py  prompt.py  quiz.py  session.py
api/services/: pipeline.py
api/static/: index.html
api/utils/: langsmith_utils.py  prompts.py  qdrant_vectordb.py  quiz.py  session.py  user.py
app/frontend/: package-lock.json  package.json  tailwind.config.js
app/frontend/public/: index.html
app/frontend/src/: App.css  App.js  App.test.js  globals.css  index.css  index.js
app/frontend/src/components/: Chat.css  Chat.js  DocumentSummary.js  FileManager.js  FileUpload.css  FileUpload.js  Quiz.js
app/frontend/src/components/ui/: CookieConsent.js  PromptEditor.js  button.js  dialog.js  input.js  label.js  radio-group.js  settings-dialog.js  switch.js  tabs.jsx  textarea.jsx  theme-provider.js  theme-toggle.js
app/frontend/src/utils/: user.js  version.js
scripts/: eval_rag.py  run_qdrant.sh
