[project]
name = "aie5-deploypythonicrag"
version = "0.4.0"
description = "Simple Pythonic RAG App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit==2.0.4",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.8",
    "langchain-qdrant>=0.2.0",
    "numpy==2.2.2",
    "openai==1.59.9",
    "pandas>=2.2.3",
    "pydantic==2.10.1",
    "pypdf2==3.0.1",
    "qdrant-client>=1.13.3",
    "uvicorn>=0.25.0",
    "websockets==14.2",
]
